[gd_scene load_steps=2 format=3 uid="uid://b23t60mfoxnac"]

[ext_resource type="Script" path="res://ca3 framework/GameOver Conditions/game_over_conditions.gd" id="1_rehls"]

[node name="GameOverConditions" type="Node"]
script = ExtResource("1_rehls")
Next = "/home/cris/Documentos/GitHub/ca3-godot-tools/src/engine/3/ca3 framework/Scene Menues/GameOver/game_over.tscn"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="LevelDelay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LevelDelay" to="." method="_on_level_delay_timeout"]
